feat(reports): preview private incident bundles
Freeze incident evidence before preview, redact known credentials, and require explicit attachment consent in settings and the dashboard.

Report downloads now use v2 ZIP bundles with JSONL evidence and a readable summary. Replace immediate GET /api/report with mark, preview and consented save POST routes. Raw developer export remains opt-in.

Refs AIRI-401